remove border-radius override on ConnectionsDisplay.svelte's connections display panel-box element,, make contrast of dark mode reading less harsh by softening background colour of centre-container in dark mode, fix p text in KofiDonateMsg.svelte so it's always dark so legible on lighter background (maintained even in dark mode)

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -88,7 +88,7 @@ html {
   max-width: 744px; /* should be just enough to squeeze in two activity log cards */
 }
 .dark .centre-container {
-  background-color: #121212;
+  background-color: #40444b;
 }
 h1,
 h2,
